# cuda_cv

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  comparision.csv
cmake/: FindCUCV.cmake
cuda_cv/: CMakeLists.txt  cuda_cv.cpp  cuda_cv.h
examples/: CMakeLists.txt  example.cpp  example.h
include/: color.h  constants.h  cuda_cv.h  edge.h  utils.h
src/: CMakeLists.txt  algorithms.cpp  algorithms.h  color.cpp  constants.h  cucv.h  cuda_cv.cpp  cuda_cv.h  edge.cpp  example.cpp  example.h  filters.cpp  utils.cpp
src/kernels/: color.cu  color_rgb_gray.cu  color_rgba_gray.cu  cv_rgb_grayscale.cu  edge_detect.cu  edge_simple_gray.cu  edge_sobel_gray.cu  filter.cu  filter_boxblur_gray.cu  filter_median_gray.cu  hello.cu  matcher.cu  utils.cu
